<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout"
    android:background="@drawable/ic_launcher_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/SY_linear1"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#000000">

        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/linear_11"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/linear_12"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/linear_13"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/linear_14"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SY_linear2"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#000000">

        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/linear_21"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/linear_22"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/linear_23"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/linear_24"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SY_linear3"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#000000">

        <TextView
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/linear_31"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
        <TextView
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/linear_32"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
        <TextView
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/linear_33"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
        <TextView
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/linear_34"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/SY_linear4"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#000000">

        <TextView
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:text="@string/linear_41"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
        <TextView
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/linear_42"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
        <TextView
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:text="@string/linear_43"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />
        <TextView
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:text="@string/linear_44"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#DCDCDC"
            android:background="@drawable/textview_border"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/SY_linear5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="#000000">
    </LinearLayout>



</LinearLayout>
    <!--tools:showIn="@layout/activity_layout"-->