<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".layout">

    <TextView
        android:id="@+id/RED"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:gravity="center"
        android:textSize="20dp"
        android:background="#ff3000"
        android:text="@string/color_RED"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ORANGE"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:gravity="center"
        android:textSize="20dp"
        android:background="#ff9600"
        android:text="@string/color_ORANGE"
        app:layout_constraintStart_toEndOf="@+id/RED"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/YELLOW"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:gravity="center"
        android:textSize="20dp"
        android:background="#f2ff00"
        android:text="@string/color_YELLOW"
        app:layout_constraintStart_toEndOf="@+id/ORANGE"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GREEN"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:textSize="20dp"
        android:background="#21ff00"
        android:text="@string/color_GREEN"
        app:layout_constraintEnd_toStartOf="@+id/BLUE"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/BLUE"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:textSize="20dp"
        android:background="#007cff"
        android:text="@string/color_BLUE"
        app:layout_constraintEnd_toStartOf="@+id/INDIGO"
        app:layout_constraintTop_toBottomOf="@+id/ORANGE" />

    <TextView
        android:id="@+id/INDIGO"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:gravity="center"
        android:textSize="20dp"
        android:background="#042b53"
        android:text="@string/color_INDIGO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/VIOLET"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:textSize="20dp"
        android:background="#e833cc"
        android:text="@string/color_VIOLET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BLUE" />
</android.support.constraint.ConstraintLayout>